Actualiza contacto.html

--- a/contacto.html
+++ b/contacto.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Correo: Ejemplo de correo</h1>
     <h2>Prueba dosss</h2>
+    <h2>Prueba para agregar al branch desarrollo</h2>
 </body>
 </html>
