Actualiza contacto.html

--- a/contacto.html
+++ b/contacto.html
@@ -9,5 +9,6 @@
     <h1>Correo: Ejemplo de correo</h1>
     <h2>Prueba dosss</h2>
     <h2>Prueba para agregar al branch desarrollo</h2>
+    <p>Este parrafo se desplegará en el branch de desarrollo</p>
 </body>
 </html>
